--- a/frontent/src/app/app.component.html
+++ b/frontent/src/app/app.component.html
@@ -1,10 +1,86 @@
 <tui-root>
 <!--<router-outlet />-->
-  <button
-    size="m"
-    tuiButton
-    type="button"
-  >
-    Medium
-  </button>
+  <div class="container">
+
+
+    <table
+      tuiTable
+      class="table"
+      [columns]="columns"
+    >
+      <thead>
+      <tr tuiThGroup>
+        <th tuiTh>Name</th>
+        <th tuiTh>Rename Years</th>
+        <th tuiTh>Address</th>
+        <th tuiTh>Photo</th>
+        <th tuiTh>Type</th>
+        <th tuiTh>Style</th>
+        <th tuiTh>Architect</th>
+      </tr>
+      </thead>
+      <tbody
+        tuiTbody
+        [data]="paginatedData"
+      >
+      <tr
+        *ngFor="let item of paginatedData"
+        tuiTr
+      >
+        <td
+          *tuiCell="'name'"
+          tuiTd
+        >
+          {{ item.name }}
+        </td>
+        <td
+          *tuiCell="'renameYears'"
+          tuiTd
+        >
+          {{ getRenameYears(item.renameYears) }}
+        </td>
+        <td
+          *tuiCell="'address'"
+          tuiTd
+        >
+          {{ item.address }}
+        </td>
+        <td
+          *tuiCell="'photoUrl'"
+          tuiTd
+        >
+          <img [src]="item.photoUrl" alt="Photo" width="100">
+        </td>
+        <td
+          *tuiCell="'type'"
+          tuiTd
+        >
+          {{ item.type }}
+        </td>
+        <td
+          *tuiCell="'style'"
+          tuiTd
+        >
+          {{ item.style }}
+        </td>
+        <td
+          *tuiCell="'architect'"
+          tuiTd
+        >
+          {{ item.architect }}
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
+    <tui-pagination
+      [length]="totalPages"
+      [(index)]="currentPage"
+      [size]="'l'"
+      (indexChange)="onPageChange($event)">
+    </tui-pagination>
+
+  </div>
+
+
 </tui-root>
