added dummy call to a service

--- a/frontent/src/app/components/main-page/main-page.component.html
+++ b/frontent/src/app/components/main-page/main-page.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-10">
     <app-toponym-table
-      [data]="data"
+      [data]="filteredData"
       [columns]="columns"
       [pageSize]="pageSize"
       (pageChanged)="onPageChanged($event)">
