--- a/frontent/src/app/components/main-page/main-page.component.html
+++ b/frontent/src/app/components/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-4">
   <div class="col-2">
     <app-toponym-filters (filtersChanged)="onFilter($event)"></app-toponym-filters>
   </div>
