--- a/frontent/src/app/components/main-page/main-page.component.html
+++ b/frontent/src/app/components/main-page/main-page.component.html
@@ -1,6 +1,7 @@
 <div class="row mt-4">
   <div class="col-2">
     <app-toponym-filters (filtersChanged)="onFilter($event)"></app-toponym-filters>
+    <app-import-export></app-import-export>
   </div>
   <div class="col-10">
     <app-toponym-table
