fixed hasPhoto selector display

--- a/frontend/src/app/components/main-page/toponym-filters/toponym-filters.component.html
+++ b/frontend/src/app/components/main-page/toponym-filters/toponym-filters.component.html
@@ -27,6 +27,7 @@
   </tui-multi-select>
 
   <tui-select
+    [stringify]="stringifyOption"
     [formControl]="filtersForm.controls['hasPhoto']"
     [tuiTextfieldCleaner]="true"
     class="mt-2"
